# external_project_repro

./: CMakeLists.txt  test.cpp
sublib/: CMakeLists.txt
